// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StartACircle page When the user is logged in should render 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="container"
      >
        <div
          class="logoContainer"
        >
          <img
            src="/logo.png"
          />
          <h2>
            <a
              href="/"
            >
              Circulate
            </a>
          </h2>
        </div>
        <div
          class="actionsContainer"
        >
          <a>
            Logout
          </a>
          <a
            href="/circles/home"
          >
            My Circles
          </a>
        </div>
      </div>
      <div
        class="Layout"
      >
        <div
          class="page"
        >
          <div
            class="headerContainer"
          >
            <h1>
              Start a Circle
            </h1>
            <h4>
              The most relevant, curated newsletter you’ve ever subscribed to starts here.
            </h4>
          </div>
          <div
            class="stepsContainer"
          >
            <ul
              class="progressbar"
            >
              <li
                class="active"
              >
                Create a Circle
              </li>
              <li>
                Invite others
              </li>
              <li>
                Get what matters
              </li>
            </ul>
          </div>
          <form
            class="ant-form ant-form-vertical ant-form-large form"
            id="horizontal_login"
          >
            <div
              class="ant-row ant-form-item"
            >
              <div
                class="ant-col ant-form-item-label"
              >
                <label
                  class="ant-form-item-required"
                  for="horizontal_login_name"
                  title="Name of Circle"
                >
                  Name of Circle
                </label>
              </div>
              <div
                class="ant-col ant-form-item-control"
              >
                <div
                  class="ant-form-item-control-input"
                >
                  <div
                    class="ant-form-item-control-input-content"
                  >
                    <input
                      class="ant-input ant-input-lg"
                      id="horizontal_login_name"
                      placeholder="Circle name"
                      type="text"
                      value=""
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              class="ant-row ant-form-item"
            >
              <div
                class="ant-col ant-form-item-label"
              >
                <label
                  class=""
                  for="horizontal_login_description"
                  title=""
                >
                  <span>
                    Circle description
                  </span>
                </label>
              </div>
              <div
                class="ant-col ant-form-item-control"
              >
                <div
                  class="ant-form-item-control-input"
                >
                  <div
                    class="ant-form-item-control-input-content"
                  >
                    <textarea
                      class="ant-input"
                      id="horizontal_login_description"
                      placeholder="Circle description"
                      rows="3"
                      style="font-size: 16px;"
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              class="ant-row ant-form-item"
            >
              <div
                class="ant-col ant-form-item-label"
              >
                <label
                  class="ant-form-item-required"
                  for="horizontal_login_frequency"
                  title=""
                >
                  <span>
                    <span
                      aria-label="info-circle"
                      class="anticon anticon-info-circle"
                      role="img"
                      tabindex="-1"
                    >
                      <svg
                        aria-hidden="true"
                        class=""
                        data-icon="info-circle"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
                        />
                        <path
                          d="M464 336a48 48 0 1096 0 48 48 0 10-96 0zm72 112h-48c-4.4 0-8 3.6-8 8v272c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8V456c0-4.4-3.6-8-8-8z"
                        />
                      </svg>
                    </span>
                     Cirulation frequency
                  </span>
                </label>
              </div>
              <div
                class="ant-col ant-form-item-control"
              >
                <div
                  class="ant-form-item-control-input"
                >
                  <div
                    class="ant-form-item-control-input-content"
                  >
                    <div
                      class="ant-select ant-select-lg ant-select-single ant-select-show-arrow"
                    >
                      <div
                        class="ant-select-selector"
                      >
                        <span
                          class="ant-select-selection-search"
                        >
                          <input
                            aria-activedescendant="horizontal_login_frequency_list_0"
                            aria-autocomplete="list"
                            aria-controls="horizontal_login_frequency_list"
                            aria-haspopup="listbox"
                            aria-owns="horizontal_login_frequency_list"
                            autocomplete="off"
                            class="ant-select-selection-search-input"
                            id="horizontal_login_frequency"
                            readonly=""
                            role="combobox"
                            style="opacity: 0;"
                            unselectable="on"
                            value=""
                          />
                        </span>
                        <span
                          class="ant-select-selection-item"
                        >
                          Weekly
                        </span>
                      </div>
                      <span
                        aria-hidden="true"
                        class="ant-select-arrow"
                        style="user-select: none;"
                        unselectable="on"
                      >
                        <span
                          aria-label="down"
                          class="anticon anticon-down"
                          role="img"
                        >
                          <svg
                            aria-hidden="true"
                            class=""
                            data-icon="down"
                            fill="currentColor"
                            focusable="false"
                            height="1em"
                            viewBox="64 64 896 896"
                            width="1em"
                          >
                            <path
                              d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                            />
                          </svg>
                        </span>
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="ant-row ant-form-item"
            >
              <div
                class="ant-col ant-form-item-label"
              >
                <label
                  class=""
                  for="horizontal_login_privacy"
                  title=""
                >
                  <span>
                    <span
                      aria-label="info-circle"
                      class="anticon anticon-info-circle"
                      role="img"
                      tabindex="-1"
                    >
                      <svg
                        aria-hidden="true"
                        class=""
                        data-icon="info-circle"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
                        />
                        <path
                          d="M464 336a48 48 0 1096 0 48 48 0 10-96 0zm72 112h-48c-4.4 0-8 3.6-8 8v272c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8V456c0-4.4-3.6-8-8-8z"
                        />
                      </svg>
                    </span>
                     Circle Privacy
                  </span>
                </label>
              </div>
              <div
                class="ant-col ant-form-item-control"
              >
                <div
                  class="ant-form-item-control-input"
                >
                  <div
                    class="ant-form-item-control-input-content"
                  >
                    <div
                      class="ant-radio-group ant-radio-group-outline ant-radio-group-large"
                      id="horizontal_login_privacy"
                    >
                      <label
                        class="verticalRadioButton ant-radio-wrapper ant-radio-wrapper-checked"
                      >
                        <span
                          class="ant-radio ant-radio-checked"
                        >
                          <input
                            checked=""
                            class="ant-radio-input"
                            type="radio"
                            value="private"
                          />
                          <span
                            class="ant-radio-inner"
                          />
                        </span>
                        <span>
                          Private
                        </span>
                      </label>
                      <label
                        class="verticalRadioButton ant-radio-wrapper"
                      >
                        <span
                          class="ant-radio"
                        >
                          <input
                            class="ant-radio-input"
                            type="radio"
                            value="public"
                          />
                          <span
                            class="ant-radio-inner"
                          />
                        </span>
                        <span>
                          Public
                        </span>
                      </label>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="ant-row ant-form-item"
            >
              <div
                class="ant-col ant-form-item-control"
              >
                <div
                  class="ant-form-item-control-input"
                >
                  <div
                    class="ant-form-item-control-input-content"
                  >
                    <button
                      class="ant-btn ant-btn-primary ant-btn-lg ant-btn-block"
                      data-testid="submitButton"
                      disabled=""
                      type="submit"
                    >
                      <span>
                        Create Circle
                      </span>
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </form>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="container"
    >
      <div
        class="logoContainer"
      >
        <img
          src="/logo.png"
        />
        <h2>
          <a
            href="/"
          >
            Circulate
          </a>
        </h2>
      </div>
      <div
        class="actionsContainer"
      >
        <a>
          Logout
        </a>
        <a
          href="/circles/home"
        >
          My Circles
        </a>
      </div>
    </div>
    <div
      class="Layout"
    >
      <div
        class="page"
      >
        <div
          class="headerContainer"
        >
          <h1>
            Start a Circle
          </h1>
          <h4>
            The most relevant, curated newsletter you’ve ever subscribed to starts here.
          </h4>
        </div>
        <div
          class="stepsContainer"
        >
          <ul
            class="progressbar"
          >
            <li
              class="active"
            >
              Create a Circle
            </li>
            <li>
              Invite others
            </li>
            <li>
              Get what matters
            </li>
          </ul>
        </div>
        <form
          class="ant-form ant-form-vertical ant-form-large form"
          id="horizontal_login"
        >
          <div
            class="ant-row ant-form-item"
          >
            <div
              class="ant-col ant-form-item-label"
            >
              <label
                class="ant-form-item-required"
                for="horizontal_login_name"
                title="Name of Circle"
              >
                Name of Circle
              </label>
            </div>
            <div
              class="ant-col ant-form-item-control"
            >
              <div
                class="ant-form-item-control-input"
              >
                <div
                  class="ant-form-item-control-input-content"
                >
                  <input
                    class="ant-input ant-input-lg"
                    id="horizontal_login_name"
                    placeholder="Circle name"
                    type="text"
                    value=""
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            class="ant-row ant-form-item"
          >
            <div
              class="ant-col ant-form-item-label"
            >
              <label
                class=""
                for="horizontal_login_description"
                title=""
              >
                <span>
                  Circle description
                </span>
              </label>
            </div>
            <div
              class="ant-col ant-form-item-control"
            >
              <div
                class="ant-form-item-control-input"
              >
                <div
                  class="ant-form-item-control-input-content"
                >
                  <textarea
                    class="ant-input"
                    id="horizontal_login_description"
                    placeholder="Circle description"
                    rows="3"
                    style="font-size: 16px;"
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            class="ant-row ant-form-item"
          >
            <div
              class="ant-col ant-form-item-label"
            >
              <label
                class="ant-form-item-required"
                for="horizontal_login_frequency"
                title=""
              >
                <span>
                  <span
                    aria-label="info-circle"
                    class="anticon anticon-info-circle"
                    role="img"
                    tabindex="-1"
                  >
                    <svg
                      aria-hidden="true"
                      class=""
                      data-icon="info-circle"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
                      />
                      <path
                        d="M464 336a48 48 0 1096 0 48 48 0 10-96 0zm72 112h-48c-4.4 0-8 3.6-8 8v272c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8V456c0-4.4-3.6-8-8-8z"
                      />
                    </svg>
                  </span>
                   Cirulation frequency
                </span>
              </label>
            </div>
            <div
              class="ant-col ant-form-item-control"
            >
              <div
                class="ant-form-item-control-input"
              >
                <div
                  class="ant-form-item-control-input-content"
                >
                  <div
                    class="ant-select ant-select-lg ant-select-single ant-select-show-arrow"
                  >
                    <div
                      class="ant-select-selector"
                    >
                      <span
                        class="ant-select-selection-search"
                      >
                        <input
                          aria-activedescendant="horizontal_login_frequency_list_0"
                          aria-autocomplete="list"
                          aria-controls="horizontal_login_frequency_list"
                          aria-haspopup="listbox"
                          aria-owns="horizontal_login_frequency_list"
                          autocomplete="off"
                          class="ant-select-selection-search-input"
                          id="horizontal_login_frequency"
                          readonly=""
                          role="combobox"
                          style="opacity: 0;"
                          unselectable="on"
                          value=""
                        />
                      </span>
                      <span
                        class="ant-select-selection-item"
                      >
                        Weekly
                      </span>
                    </div>
                    <span
                      aria-hidden="true"
                      class="ant-select-arrow"
                      style="user-select: none;"
                      unselectable="on"
                    >
                      <span
                        aria-label="down"
                        class="anticon anticon-down"
                        role="img"
                      >
                        <svg
                          aria-hidden="true"
                          class=""
                          data-icon="down"
                          fill="currentColor"
                          focusable="false"
                          height="1em"
                          viewBox="64 64 896 896"
                          width="1em"
                        >
                          <path
                            d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                          />
                        </svg>
                      </span>
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="ant-row ant-form-item"
          >
            <div
              class="ant-col ant-form-item-label"
            >
              <label
                class=""
                for="horizontal_login_privacy"
                title=""
              >
                <span>
                  <span
                    aria-label="info-circle"
                    class="anticon anticon-info-circle"
                    role="img"
                    tabindex="-1"
                  >
                    <svg
                      aria-hidden="true"
                      class=""
                      data-icon="info-circle"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
                      />
                      <path
                        d="M464 336a48 48 0 1096 0 48 48 0 10-96 0zm72 112h-48c-4.4 0-8 3.6-8 8v272c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8V456c0-4.4-3.6-8-8-8z"
                      />
                    </svg>
                  </span>
                   Circle Privacy
                </span>
              </label>
            </div>
            <div
              class="ant-col ant-form-item-control"
            >
              <div
                class="ant-form-item-control-input"
              >
                <div
                  class="ant-form-item-control-input-content"
                >
                  <div
                    class="ant-radio-group ant-radio-group-outline ant-radio-group-large"
                    id="horizontal_login_privacy"
                  >
                    <label
                      class="verticalRadioButton ant-radio-wrapper ant-radio-wrapper-checked"
                    >
                      <span
                        class="ant-radio ant-radio-checked"
                      >
                        <input
                          checked=""
                          class="ant-radio-input"
                          type="radio"
                          value="private"
                        />
                        <span
                          class="ant-radio-inner"
                        />
                      </span>
                      <span>
                        Private
                      </span>
                    </label>
                    <label
                      class="verticalRadioButton ant-radio-wrapper"
                    >
                      <span
                        class="ant-radio"
                      >
                        <input
                          class="ant-radio-input"
                          type="radio"
                          value="public"
                        />
                        <span
                          class="ant-radio-inner"
                        />
                      </span>
                      <span>
                        Public
                      </span>
                    </label>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="ant-row ant-form-item"
          >
            <div
              class="ant-col ant-form-item-control"
            >
              <div
                class="ant-form-item-control-input"
              >
                <div
                  class="ant-form-item-control-input-content"
                >
                  <button
                    class="ant-btn ant-btn-primary ant-btn-lg ant-btn-block"
                    data-testid="submitButton"
                    disabled=""
                    type="submit"
                  >
                    <span>
                      Create Circle
                    </span>
                  </button>
                </div>
              </div>
            </div>
          </div>
        </form>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`StartACircle page When the user is not logged in should render 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="container"
      >
        <div
          class="logoContainer"
        >
          <img
            src="/logo.png"
          />
          <h2>
            <a
              href="/"
            >
              Circulate
            </a>
          </h2>
        </div>
        <div
          class="actionsContainer"
        >
          <a>
            Logout
          </a>
          <a
            href="/circles/home"
          >
            My Circles
          </a>
        </div>
      </div>
      <div
        class="Layout"
      >
        <div
          class="page"
        >
          <div
            class="headerContainer"
          >
            <h1>
              Start a Circle
            </h1>
            <h4>
              The most relevant, curated newsletter you’ve ever subscribed to starts here.
            </h4>
          </div>
          <div
            class="stepsContainer"
          >
            <ul
              class="progressbar"
            >
              <li
                class="active"
              >
                Create a Circle
              </li>
              <li>
                Invite others
              </li>
              <li>
                Get what matters
              </li>
            </ul>
          </div>
          <p>
            You must be signed in to Start a Circle
          </p>
          <div
            class="container"
          >
            <div
              class="formTagline"
            >
              <h2>
                Sign in
              </h2>
              <span>
                Welcome back
              </span>
              <hr />
            </div>
            <form
              class="ant-form ant-form-vertical ant-form-large form"
              id="horizontal_login"
            >
              <div
                class="ant-row ant-form-item"
              >
                <div
                  class="ant-col ant-form-item-label"
                >
                  <label
                    class="ant-form-item-required"
                    for="horizontal_login_email"
                    title="Email Address"
                  >
                    Email Address
                  </label>
                </div>
                <div
                  class="ant-col ant-form-item-control"
                >
                  <div
                    class="ant-form-item-control-input"
                  >
                    <div
                      class="ant-form-item-control-input-content"
                    >
                      <span
                        class="ant-input-affix-wrapper ant-input-affix-wrapper-lg"
                      >
                        <span
                          class="ant-input-prefix"
                        >
                          <span
                            aria-label="mail"
                            class="anticon anticon-mail site-form-item-icon"
                            role="img"
                          >
                            <svg
                              aria-hidden="true"
                              class=""
                              data-icon="mail"
                              fill="currentColor"
                              focusable="false"
                              height="1em"
                              viewBox="64 64 896 896"
                              width="1em"
                            >
                              <path
                                d="M928 160H96c-17.7 0-32 14.3-32 32v640c0 17.7 14.3 32 32 32h832c17.7 0 32-14.3 32-32V192c0-17.7-14.3-32-32-32zm-40 110.8V792H136V270.8l-27.6-21.5 39.3-50.5 42.8 33.3h643.1l42.8-33.3 39.3 50.5-27.7 21.5zM833.6 232L512 482 190.4 232l-42.8-33.3-39.3 50.5 27.6 21.5 341.6 265.6a55.99 55.99 0 0068.7 0L888 270.8l27.6-21.5-39.3-50.5-42.7 33.2z"
                              />
                            </svg>
                          </span>
                        </span>
                        <input
                          autocomplete="email"
                          class="ant-input ant-input-lg"
                          id="horizontal_login_email"
                          placeholder="joedoe@gmail.com"
                          type="email"
                          value=""
                        />
                      </span>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="ant-row ant-form-item"
              >
                <div
                  class="ant-col ant-form-item-label"
                >
                  <label
                    class="ant-form-item-required"
                    for="horizontal_login_password"
                    title="Password"
                  >
                    Password
                  </label>
                </div>
                <div
                  class="ant-col ant-form-item-control"
                >
                  <div
                    class="ant-form-item-control-input"
                  >
                    <div
                      class="ant-form-item-control-input-content"
                    >
                      <span
                        class="ant-input-password ant-input-affix-wrapper ant-input-affix-wrapper-lg"
                      >
                        <span
                          class="ant-input-prefix"
                        >
                          <span
                            aria-label="lock"
                            class="anticon anticon-lock site-form-item-icon"
                            role="img"
                          >
                            <svg
                              aria-hidden="true"
                              class=""
                              data-icon="lock"
                              fill="currentColor"
                              focusable="false"
                              height="1em"
                              viewBox="64 64 896 896"
                              width="1em"
                            >
                              <path
                                d="M832 464h-68V240c0-70.7-57.3-128-128-128H388c-70.7 0-128 57.3-128 128v224h-68c-17.7 0-32 14.3-32 32v384c0 17.7 14.3 32 32 32h640c17.7 0 32-14.3 32-32V496c0-17.7-14.3-32-32-32zM332 240c0-30.9 25.1-56 56-56h248c30.9 0 56 25.1 56 56v224H332V240zm460 600H232V536h560v304zM484 701v53c0 4.4 3.6 8 8 8h40c4.4 0 8-3.6 8-8v-53a48.01 48.01 0 10-56 0z"
                              />
                            </svg>
                          </span>
                        </span>
                        <input
                          action="click"
                          autocomplete="current-password"
                          class="ant-input ant-input-lg"
                          id="horizontal_login_password"
                          placeholder="Password"
                          type="password"
                          value=""
                        />
                        <span
                          class="ant-input-suffix"
                        >
                          <span
                            aria-label="eye-invisible"
                            class="anticon anticon-eye-invisible ant-input-password-icon"
                            role="img"
                            tabindex="-1"
                          >
                            <svg
                              aria-hidden="true"
                              class=""
                              data-icon="eye-invisible"
                              fill="currentColor"
                              focusable="false"
                              height="1em"
                              viewBox="64 64 896 896"
                              width="1em"
                            >
                              <path
                                d="M942.2 486.2Q889.47 375.11 816.7 305l-50.88 50.88C807.31 395.53 843.45 447.4 874.7 512 791.5 684.2 673.4 766 512 766q-72.67 0-133.87-22.38L323 798.75Q408 838 512 838q288.3 0 430.2-300.3a60.29 60.29 0 000-51.5zm-63.57-320.64L836 122.88a8 8 0 00-11.32 0L715.31 232.2Q624.86 186 512 186q-288.3 0-430.2 300.3a60.3 60.3 0 000 51.5q56.69 119.4 136.5 191.41L112.48 835a8 8 0 000 11.31L155.17 889a8 8 0 0011.31 0l712.15-712.12a8 8 0 000-11.32zM149.3 512C232.6 339.8 350.7 258 512 258c54.54 0 104.13 9.36 149.12 28.39l-70.3 70.3a176 176 0 00-238.13 238.13l-83.42 83.42C223.1 637.49 183.3 582.28 149.3 512zm246.7 0a112.11 112.11 0 01146.2-106.69L401.31 546.2A112 112 0 01396 512z"
                              />
                              <path
                                d="M508 624c-3.46 0-6.87-.16-10.25-.47l-52.82 52.82a176.09 176.09 0 00227.42-227.42l-52.82 52.82c.31 3.38.47 6.79.47 10.25a111.94 111.94 0 01-112 112z"
                              />
                            </svg>
                          </span>
                        </span>
                      </span>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="ant-row ant-form-item"
              >
                <div
                  class="ant-col ant-form-item-control"
                >
                  <div
                    class="ant-form-item-control-input"
                  >
                    <div
                      class="ant-form-item-control-input-content"
                    >
                      <button
                        class="ant-btn ant-btn-primary ant-btn-lg ant-btn-block"
                        data-testid="submitButton"
                        disabled=""
                        type="submit"
                      >
                        <span>
                          Log in
                        </span>
                      </button>
                    </div>
                  </div>
                </div>
              </div>
            </form>
            <p>
              Forgot password?
            </p>
            <p>
              Not a member? Sign up!
            </p>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="container"
    >
      <div
        class="logoContainer"
      >
        <img
          src="/logo.png"
        />
        <h2>
          <a
            href="/"
          >
            Circulate
          </a>
        </h2>
      </div>
      <div
        class="actionsContainer"
      >
        <a>
          Logout
        </a>
        <a
          href="/circles/home"
        >
          My Circles
        </a>
      </div>
    </div>
    <div
      class="Layout"
    >
      <div
        class="page"
      >
        <div
          class="headerContainer"
        >
          <h1>
            Start a Circle
          </h1>
          <h4>
            The most relevant, curated newsletter you’ve ever subscribed to starts here.
          </h4>
        </div>
        <div
          class="stepsContainer"
        >
          <ul
            class="progressbar"
          >
            <li
              class="active"
            >
              Create a Circle
            </li>
            <li>
              Invite others
            </li>
            <li>
              Get what matters
            </li>
          </ul>
        </div>
        <p>
          You must be signed in to Start a Circle
        </p>
        <div
          class="container"
        >
          <div
            class="formTagline"
          >
            <h2>
              Sign in
            </h2>
            <span>
              Welcome back
            </span>
            <hr />
          </div>
          <form
            class="ant-form ant-form-vertical ant-form-large form"
            id="horizontal_login"
          >
            <div
              class="ant-row ant-form-item"
            >
              <div
                class="ant-col ant-form-item-label"
              >
                <label
                  class="ant-form-item-required"
                  for="horizontal_login_email"
                  title="Email Address"
                >
                  Email Address
                </label>
              </div>
              <div
                class="ant-col ant-form-item-control"
              >
                <div
                  class="ant-form-item-control-input"
                >
                  <div
                    class="ant-form-item-control-input-content"
                  >
                    <span
                      class="ant-input-affix-wrapper ant-input-affix-wrapper-lg"
                    >
                      <span
                        class="ant-input-prefix"
                      >
                        <span
                          aria-label="mail"
                          class="anticon anticon-mail site-form-item-icon"
                          role="img"
                        >
                          <svg
                            aria-hidden="true"
                            class=""
                            data-icon="mail"
                            fill="currentColor"
                            focusable="false"
                            height="1em"
                            viewBox="64 64 896 896"
                            width="1em"
                          >
                            <path
                              d="M928 160H96c-17.7 0-32 14.3-32 32v640c0 17.7 14.3 32 32 32h832c17.7 0 32-14.3 32-32V192c0-17.7-14.3-32-32-32zm-40 110.8V792H136V270.8l-27.6-21.5 39.3-50.5 42.8 33.3h643.1l42.8-33.3 39.3 50.5-27.7 21.5zM833.6 232L512 482 190.4 232l-42.8-33.3-39.3 50.5 27.6 21.5 341.6 265.6a55.99 55.99 0 0068.7 0L888 270.8l27.6-21.5-39.3-50.5-42.7 33.2z"
                            />
                          </svg>
                        </span>
                      </span>
                      <input
                        autocomplete="email"
                        class="ant-input ant-input-lg"
                        id="horizontal_login_email"
                        placeholder="joedoe@gmail.com"
                        type="email"
                        value=""
                      />
                    </span>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="ant-row ant-form-item"
            >
              <div
                class="ant-col ant-form-item-label"
              >
                <label
                  class="ant-form-item-required"
                  for="horizontal_login_password"
                  title="Password"
                >
                  Password
                </label>
              </div>
              <div
                class="ant-col ant-form-item-control"
              >
                <div
                  class="ant-form-item-control-input"
                >
                  <div
                    class="ant-form-item-control-input-content"
                  >
                    <span
                      class="ant-input-password ant-input-affix-wrapper ant-input-affix-wrapper-lg"
                    >
                      <span
                        class="ant-input-prefix"
                      >
                        <span
                          aria-label="lock"
                          class="anticon anticon-lock site-form-item-icon"
                          role="img"
                        >
                          <svg
                            aria-hidden="true"
                            class=""
                            data-icon="lock"
                            fill="currentColor"
                            focusable="false"
                            height="1em"
                            viewBox="64 64 896 896"
                            width="1em"
                          >
                            <path
                              d="M832 464h-68V240c0-70.7-57.3-128-128-128H388c-70.7 0-128 57.3-128 128v224h-68c-17.7 0-32 14.3-32 32v384c0 17.7 14.3 32 32 32h640c17.7 0 32-14.3 32-32V496c0-17.7-14.3-32-32-32zM332 240c0-30.9 25.1-56 56-56h248c30.9 0 56 25.1 56 56v224H332V240zm460 600H232V536h560v304zM484 701v53c0 4.4 3.6 8 8 8h40c4.4 0 8-3.6 8-8v-53a48.01 48.01 0 10-56 0z"
                            />
                          </svg>
                        </span>
                      </span>
                      <input
                        action="click"
                        autocomplete="current-password"
                        class="ant-input ant-input-lg"
                        id="horizontal_login_password"
                        placeholder="Password"
                        type="password"
                        value=""
                      />
                      <span
                        class="ant-input-suffix"
                      >
                        <span
                          aria-label="eye-invisible"
                          class="anticon anticon-eye-invisible ant-input-password-icon"
                          role="img"
                          tabindex="-1"
                        >
                          <svg
                            aria-hidden="true"
                            class=""
                            data-icon="eye-invisible"
                            fill="currentColor"
                            focusable="false"
                            height="1em"
                            viewBox="64 64 896 896"
                            width="1em"
                          >
                            <path
                              d="M942.2 486.2Q889.47 375.11 816.7 305l-50.88 50.88C807.31 395.53 843.45 447.4 874.7 512 791.5 684.2 673.4 766 512 766q-72.67 0-133.87-22.38L323 798.75Q408 838 512 838q288.3 0 430.2-300.3a60.29 60.29 0 000-51.5zm-63.57-320.64L836 122.88a8 8 0 00-11.32 0L715.31 232.2Q624.86 186 512 186q-288.3 0-430.2 300.3a60.3 60.3 0 000 51.5q56.69 119.4 136.5 191.41L112.48 835a8 8 0 000 11.31L155.17 889a8 8 0 0011.31 0l712.15-712.12a8 8 0 000-11.32zM149.3 512C232.6 339.8 350.7 258 512 258c54.54 0 104.13 9.36 149.12 28.39l-70.3 70.3a176 176 0 00-238.13 238.13l-83.42 83.42C223.1 637.49 183.3 582.28 149.3 512zm246.7 0a112.11 112.11 0 01146.2-106.69L401.31 546.2A112 112 0 01396 512z"
                            />
                            <path
                              d="M508 624c-3.46 0-6.87-.16-10.25-.47l-52.82 52.82a176.09 176.09 0 00227.42-227.42l-52.82 52.82c.31 3.38.47 6.79.47 10.25a111.94 111.94 0 01-112 112z"
                            />
                          </svg>
                        </span>
                      </span>
                    </span>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="ant-row ant-form-item"
            >
              <div
                class="ant-col ant-form-item-control"
              >
                <div
                  class="ant-form-item-control-input"
                >
                  <div
                    class="ant-form-item-control-input-content"
                  >
                    <button
                      class="ant-btn ant-btn-primary ant-btn-lg ant-btn-block"
                      data-testid="submitButton"
                      disabled=""
                      type="submit"
                    >
                      <span>
                        Log in
                      </span>
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </form>
          <p>
            Forgot password?
          </p>
          <p>
            Not a member? Sign up!
          </p>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
